--- a/CoffeeShop.UI/Views/EditBeans.xaml
+++ b/CoffeeShop.UI/Views/EditBeans.xaml
@@ -6,7 +6,61 @@
         xmlns:local="clr-namespace:CoffeeShop.UI.Views"
         mc:Ignorable="d"
         Title="EditBeans" Height="450" Width="800">
-    <Grid>
-        
+  <Grid DataContext="{Binding ElementName=beansList, Path=SelectedItem }">
+    <Grid.RowDefinitions>
+      <RowDefinition Height="*" />
+    </Grid.RowDefinitions>
+    <Grid.ColumnDefinitions>
+      <ColumnDefinition Width="*" />
+      <ColumnDefinition Width="3*"/>
+    </Grid.ColumnDefinitions>
+
+    <ListBox Name="beansList" Grid.ColumnSpan="1" SelectionChanged="BeansList_OnSelectionChanged" Margin="0,0,0,39">
+      <ListBox.ItemTemplate>
+        <DataTemplate>
+          <TextBlock Text="{Binding Name}" />
+        </DataTemplate>
+      </ListBox.ItemTemplate>
+    </ListBox>
+
+    <Grid Grid.Column="1" Margin="0,0,-0.5,0">
+      <Grid.RowDefinitions>
+        <RowDefinition Height="*" />
+      </Grid.RowDefinitions>
+      <Grid.ColumnDefinitions>
+        <ColumnDefinition Width="1*" />
+        <ColumnDefinition Width="3*" />
+      </Grid.ColumnDefinitions>
+
+      <TextBox Name="IdTextBox" Grid.Column="1" Height="23" Margin="8,8,8,0" TextWrapping="Wrap" Text="{Binding Id, Mode=TwoWay}" VerticalAlignment="Top" Grid.ColumnSpan="2" IsEnabled="False"/>
+
+      <TextBox Name="NameTextBox" Grid.Column="1" Height="23" Margin="8,39,8,0" TextWrapping="Wrap" Text="{Binding Name, Mode=TwoWay}" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
+
+      <RichTextBox Name="DescriptionTextBox" Grid.Column="1" HorizontalAlignment="Stretch" Height="54" Margin="8,70,8,0" VerticalAlignment="Top" Width="Auto" Grid.ColumnSpan="2">
+        <FlowDocument>
+          <Paragraph>
+            <Run Text="{Binding Description, Mode=TwoWay}"/>
+          </Paragraph>
+        </FlowDocument>
+      </RichTextBox>
+
+      <ComboBox Name="OriginComboBox" SelectedItem="{Binding Origin, Mode=TwoWay}" Grid.Column="1" Margin="8,132,8,0" VerticalAlignment="Top" Height="22" Grid.ColumnSpan="2"/>
+
+      <ComboBox Name="RoastComboBox" SelectedItem="{Binding Roast, Mode=TwoWay}" Grid.Column="1" VerticalAlignment="Top" Margin="8,162,8,0" Height="22" Grid.ColumnSpan="2"/>
+
+      <TextBox Name="PriceTextBox" Grid.Column="1" Height="23" Margin="8,192,8,0" TextWrapping="Wrap" Text="{Binding Price, Mode=TwoWay, StringFormat={}{0:C}}" VerticalAlignment="Top" />
+
+      <TextBlock Margin="8,8,8,0" TextWrapping="Wrap" Text="ID" VerticalAlignment="Top" Height="23"/>
+      <TextBlock Margin="8,70,8,0" TextWrapping="Wrap" Text="Description" VerticalAlignment="Top" Height="23"/>
+      <TextBlock Margin="8,39,8,0" TextWrapping="Wrap" Text="Name" VerticalAlignment="Top" Height="23"/>
+      <TextBlock Margin="8,132,8,0" TextWrapping="Wrap" Text="Origin" VerticalAlignment="Top" Height="23"/>
+      <TextBlock Margin="8,162,8,0" TextWrapping="Wrap" Text="Roast" VerticalAlignment="Top" Height="23"/>
+      <TextBlock Margin="8,192,8,0" TextWrapping="Wrap" Text="Price" VerticalAlignment="Top" Height="23"/>
+      <Image Name="Image" Source="{Binding ImagePath}" Grid.Column="1" Margin="8,223,8,8" Visibility="Hidden" />
+      <Button Name="AddImageButton" Content="Add Image" Grid.Column="1" Margin="8,223,8,8" Background="{x:Null}" BorderBrush="{x:Null}" Click="AddImageButton_OnClick"/>
     </Grid>
+
+    <Button Name="CreateBeanButton" Content="Create Bean" HorizontalAlignment="Left" Margin="8,0,0,8" VerticalAlignment="Bottom" Width="87" Click="CreateBeanButton_OnClick"/>
+    <Button Name="RemoveBeanButton" Content="Remove Bean" Margin="0,0,8,8" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="87" Click="RemoveBeanButton_OnClick"/>
+  </Grid>
 </Window>
