--- a/CoffeeShop.UI/Views/ShowBeans.xaml
+++ b/CoffeeShop.UI/Views/ShowBeans.xaml
@@ -6,54 +6,57 @@
         xmlns:local="clr-namespace:CoffeeShop.UI.Views"
         mc:Ignorable="d"
         Title="ShowBeans" Height="450" Width="800">
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="3*" />
-        </Grid.ColumnDefinitions>
+  <Grid DataContext="{Binding ElementName=beansList, Path=SelectedItem }">
+    <Grid.RowDefinitions>
+      <RowDefinition Height="*" />
+    </Grid.RowDefinitions>
+    <Grid.ColumnDefinitions>
+      <ColumnDefinition Width="*" />
+      <ColumnDefinition Width="3*"/>
+    </Grid.ColumnDefinitions>
 
-        <ListBox Name="beansList">
-            <ListBox.ItemTemplate>
-                <DataTemplate>
-                    <TextBlock Text="{Binding Path=Name}"></TextBlock>
-                </DataTemplate>
-            </ListBox.ItemTemplate>
-        </ListBox>
+    <ListBox Name="beansList" Grid.ColumnSpan="1" SelectionChanged="BeansList_OnSelectionChanged">
+      <ListBox.ItemTemplate>
+        <DataTemplate>
+          <TextBlock Text="{Binding Name}" />
+        </DataTemplate>
+      </ListBox.ItemTemplate>
+    </ListBox>
 
-        <Grid Grid.Column="1" HorizontalAlignment="Left" Width="596" Margin="0">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
+    <Grid Grid.Column="1" Margin="0,0,-0.5,0">
+      <Grid.RowDefinitions>
+        <RowDefinition Height="*" />
+      </Grid.RowDefinitions>
+      <Grid.ColumnDefinitions>
+        <ColumnDefinition Width="1*" />
+        <ColumnDefinition Width="3*" />
+      </Grid.ColumnDefinitions>
 
-            <TextBox Height="23" Margin="8" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
-            <TextBox Grid.Column="0" Height="23" Margin="8,39,8,8" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top"/>
-            <RichTextBox Grid.Column="1" HorizontalAlignment="Stretch" Height="54" Margin="8,39,8,0" VerticalAlignment="Top" Width="Auto">
-                <FlowDocument>
-                    <Paragraph>
-                        <Run Text="RichTextBox"/>
-                    </Paragraph>
-                </FlowDocument>
-            </RichTextBox>
+      <TextBox Name="IdTextBox" Grid.Column="1" Height="23" Margin="8,8,8,0" TextWrapping="Wrap" Text="{Binding Id, Mode=TwoWay}" VerticalAlignment="Top" IsEnabled="False" Grid.ColumnSpan="2"/>
 
-            <Grid  Grid.Column="0" Margin="0,70,0,329">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="*" />
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
+      <TextBox Name="NameTextBox" Grid.Column="1" Height="23" Margin="8,39,8,0" TextWrapping="Wrap" Text="{Binding Name, Mode=TwoWay}" VerticalAlignment="Top" IsEnabled="False" Grid.ColumnSpan="2"/>
 
-                <ComboBox Grid.Column="0" Margin="8,0" VerticalAlignment="Top"/>
-                <ComboBox Grid.Column="1" Margin="8,0" VerticalAlignment="Top"/>
-            </Grid>
-        </Grid>
+      <RichTextBox Name="DescriptionTextBox" Grid.Column="1" HorizontalAlignment="Stretch" Height="54" Margin="8,70,8,0" VerticalAlignment="Top" Width="Auto" IsEnabled="False" Grid.ColumnSpan="2">
+        <FlowDocument>
+          <Paragraph>
+            <Run Text="{Binding Description, Mode=TwoWay}"/>
+          </Paragraph>
+        </FlowDocument>
+      </RichTextBox>
+
+      <ComboBox Name="OriginComboBox" SelectedItem="{Binding Origin, Mode=TwoWay}" Grid.Column="1" Margin="8,132,8,0" VerticalAlignment="Top" IsEnabled="False" Height="22" Grid.ColumnSpan="2"/>
+
+      <ComboBox Name="RoastComboBox" SelectedItem="{Binding Roast, Mode=TwoWay}" Grid.Column="1" VerticalAlignment="Top" Margin="8,162,8,0" IsEnabled="False" Height="22" Grid.ColumnSpan="2"/>
+
+      <TextBox Name="PriceTextBox" Grid.Column="1" Height="23" Margin="8,192,8,0" TextWrapping="Wrap" Text="{Binding Price, Mode=TwoWay, StringFormat={}{0:C}}" VerticalAlignment="Top" IsEnabled="False" />
+
+      <TextBlock Margin="8,8,8,0" TextWrapping="Wrap" Text="ID" VerticalAlignment="Top" Height="23"/>
+      <TextBlock Margin="8,70,8,0" TextWrapping="Wrap" Text="Description" VerticalAlignment="Top" Height="23"/>
+      <TextBlock Margin="8,39,8,0" TextWrapping="Wrap" Text="Name" VerticalAlignment="Top" Height="23"/>
+      <TextBlock Margin="8,132,8,0" TextWrapping="Wrap" Text="Origin" VerticalAlignment="Top" Height="23"/>
+      <TextBlock Margin="8,192,8,0" TextWrapping="Wrap" Text="Price" VerticalAlignment="Top" Height="23"/>
+      <TextBlock Margin="8,162,8,0" TextWrapping="Wrap" Text="Roast" VerticalAlignment="Top" Height="23"/>
+      <Image Name="Image" Source="{Binding ImagePath}" Grid.Column="1" Margin="8,223,8,8" Visibility="Hidden" />
     </Grid>
+  </Grid>
 </Window>
