--- a/CoffeeShop.UI/Menu.xaml
+++ b/CoffeeShop.UI/Menu.xaml
@@ -5,16 +5,30 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CoffeeShop.UI"
         mc:Ignorable="d"
-        Title="Menu" Height="347" Width="300">
-  <StackPanel Margin="0">
-    <TextBlock TextWrapping="Wrap" Text="Customer Section" Margin="8"/>
-    <Button Name="showBeansButton"  Content="Show Beans" Margin="8,0,8,8" Padding="8" Click="ShowBeans" />
-    <Button Name="showDrinksButton" Content="Show Drinks" Margin="8,0,8,8" Padding="8" Click="ShowDrinks" />
-    <Button Name="showSnacksButton" Content="Show Snacks" Margin="8,0,8,8" Padding="8" Click="ShowSnacks" />
+        Title="Menu" Width="300" Height="347.5" MinHeight="347.5" ShowInTaskbar="False" ResizeMode="NoResize">
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
 
-    <TextBlock TextWrapping="Wrap" Text="Administration" Margin="8"/>
-    <Button Name="editBeansButton" Content="Edit Beans" Margin="8,0,8,8" Padding="8" Click="EditBeans" />
-    <Button Name="editDrinksButton" Content="Edit Drinks" Margin="8,0,8,8" Padding="8" Click="EditDrinks" />
-    <Button Name="editSnacksButton" Content="Edit Snacks" Margin="8,0,8,8" Padding="8" Click="EditSnacks" />
-  </StackPanel>
+
+        <StackPanel Grid.Row="0" Height="160">
+            <TextBlock TextWrapping="Wrap" Text="Customer Section" Margin="8"/>
+            <Button Name="showBeansButton" Content="Show Beans" Padding="8" Click="ShowBeans" Margin="8,0,8,8" />
+            <Button Name="showDrinksButton" Content="Show Drinks" Margin="8,0,8,8" Padding="8" Click="ShowDrinks" />
+            <Button Name="showSnacksButton" Content="Show Snacks" Margin="8,0,8,8" Padding="8" Click="ShowSnacks" />
+        </StackPanel>
+
+
+        <StackPanel Grid.Row="1" Height="160">
+            <TextBlock TextWrapping="Wrap" Text="Administration" Margin="8"/>
+            <Button Name="editBeansButton" Content="Edit Beans" Margin="8,0,8,8" Padding="8" Click="EditBeans" />
+            <Button Name="editDrinksButton" Content="Edit Drinks" Margin="8,0,8,8" Padding="8" Click="EditDrinks" />
+            <Button Name="editSnacksButton" Content="Edit Snacks" Margin="8,0,8,8" Padding="8" Click="EditSnacks" />
+        </StackPanel>
+    </Grid>
 </Window>
