--- a/CoffeeShop.UI/Views/EditBeans.xaml
+++ b/CoffeeShop.UI/Views/EditBeans.xaml
@@ -23,7 +23,7 @@
       </ListBox.ItemTemplate>
     </ListBox>
 
-    <Grid Grid.Column="1" Margin="0,0,-0.5,0">
+    <Grid Grid.Column="1" Margin="0">
       <Grid.RowDefinitions>
         <RowDefinition Height="*" />
       </Grid.RowDefinitions>
